Small fixes to tutorial

--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Atooms and postprocessing \n",
+    "# Postprocessing with atooms \n",
     "\n",
-    "In this notebook, we are going to show how to perform standard analysis of molecular dynamics trajectories using the **atooms** package and its **postprocessing** library."
+    "In this notebook, we are going to show how to perform standard analysis of molecular dynamics trajectories using the **atooms** package and its **postprocessing** library. You can install both of them from pypi. "
    ]
   },
   {
@@ -694,6 +694,13 @@
    "source": [
     "nw = NewCorrelation(th, [0.0, 1.0])\n",
     "nw.compute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Author: Francesco Turci*"
    ]
   },
   {
