--- a/docs/index.org
+++ b/docs/index.org
@@ -1,15 +1,16 @@
-#+title: Postprocessing with atooms
-#+subtitle: A Python framework for interacting particles
+#+title: Atooms: postprocessing
 #+author: Francesco Turci, Daniele Coslovich
-#+date: Version: >= 3.0.0
+#+date: Minimum version: >= 2.0.0
 #+html_doctype: html5
 #+options: html-style:nil
+
+In this notebook, we are going to show how to perform standard analysis of molecular dynamics trajectories using the **atooms** package and its **postprocessing** component. You can install **postprocessing** from pypi: =pip install atooms-pp=. 
 
 * Setup                                                    :noexport:ARCHIVE:
 #+language: en
 #+select_tags: export
 #+exclude_tags: noexport
-#+options: toc:4 num:nil title:nil author:nil email:nil timestamp:nil h:4 \n:nil @:t ::t |:t ^:{} _:{} *:t tex:t latex:t
+#+options: toc:t num:t title:t author:t email:nil timestamp:t h:4 \n:nil @:t ::t |:t ^:{} _:{} *:t tex:t latex:t
 #+property: header-args:python :exports both :session :results output :tangle index.py
 #+property: header-args:gnuplot :exports results
 #+setupfile: /home/coslo/usr/org-config/latex.setup
@@ -17,15 +18,13 @@
 
 * Setup
 
-In this notebook, we are going to show how to perform standard analysis of molecular dynamics trajectories using the **atooms** package and its **postprocessing** library. You can install both of them from pypi. 
-
-We start by loading common libraries for plotting and path handling.
+We start by loading common libraries for plotting and path handling
 #+begin_src python :results none
 import matplotlib.pyplot as pl
 import sys
 #+end_src
 
-We then import the **postprocessing** library and the trajectory class from **atooms**. In this particular case, we will read an XYZ file, so we load the **TrajectoryXYZ** class
+We then import the **postprocessing** package and the trajectory class from **atooms**. In this particular case, we will read a trajectory file in XYZ format, so we load the =TrajectoryXYZ= class
 #+begin_src python
 import atooms.postprocessing as pp
 from atooms.trajectory import TrajectoryXYZ 
@@ -33,7 +32,7 @@ from atooms.trajectory import TrajectoryXYZ
 
 #+results:
 
-We consider an example trajectory, located in the postprocessing package. We can grab from the git repository. Let's store the path to this file in a variable for later convenience
+We consider a sa mple trajectory, which can be download from the repository of the postprocessing package itself. Let's store the path to this file in a variable for later convenience
 #+begin_src python
 from atooms.core.utils import download
 download('https://framagit.org/atooms/postprocessing/raw/master/data/kalj-small.xyz', "/tmp")
@@ -57,7 +56,7 @@ th[0], th[10], th[-1]
 #+end_src
 
 #+results:
-: (<atooms.system.system.System object at 0x7f7cbff74a30>, <atooms.system.system.System object at 0x7f7cbff85400>, <atooms.system.system.System object at 0x7f7cbff91d90>)
+: (<atooms.system.system.System object at 0x7f2b75818dc0>, <atooms.system.system.System object at 0x7f2b75825790>, <atooms.system.system.System object at 0x7f2b75775160>)
 
 To know how many frames we have
 #+begin_src python
@@ -69,25 +68,33 @@ len(th)
 
 To clarify: a slice is a list of frames, not a trajectory
 #+begin_src python
-th[10: 15]
+th[10: 12]
 #+end_src
 
 #+results:
-: [<atooms.system.system.System object at 0x7f7cbff6fa90>, <atooms.system.system.System object at 0x7f7cbff7e490>, <atooms.system.system.System object at 0x7f7cbff8ee20>, <atooms.system.system.System object at 0x7f7cbfef0820>, <atooms.system.system.System object at 0x7f7cbfefe1f0>]
+: [<atooms.system.system.System object at 0x7f2b75813e50>, <atooms.system.system.System object at 0x7f2b75820850>]
 
 Note: it is actually possible to define a slice of a trajectory *as a trajectory* by using the =Sliced= class decorator, see below.
 
 If the trajectory contains metadata, these can be retrieved directly:
 #+begin_src python
+from pprint import pprint
 print("Timestep during the trajectory:", th.timestep)
 print("Steps corresponding to the 3rd frame:", th.steps[2])
-print("Trajectory metadata", th.metadata)
+print("Additional metadata:")
+pprint(th.metadata)
 #+end_src
 
 #+results:
 : Timestep during the trajectory: 0.001
 : Steps corresponding to the 3rd frame: 2000
-: Trajectory metadata {'npart': 150, 'step': 0, 'columns': ['name', 'pos'], 'cell': [5.0, 5.0, 5.0], 'dt': 0.001, 'ndim': 3}
+: Additional metadata:
+: {'cell': [5.0, 5.0, 5.0],
+:  'columns': ['name', 'pos'],
+:  'dt': 0.001,
+:  'ndim': 3,
+:  'npart': 150,
+:  'step': 0}
 
 * Analysis of the trajectory
 
@@ -99,17 +106,17 @@ Now that we have constructed a trajectory object, we can proceed to the analysis
 
 *** Radial distribution function
 
-The radial distribution function $g(r)$ describes how density varies as a function of the radial distance from a reference particle. In liquids, one normally averages over all particles, obtaining a descriptor of the probability to find a second particle a distance $r$ from a given particle, relative to that of the ideal gas.
+The radial distribution function $g(r)$ describes how the local density varies as a function of the distance from a reference particle. In liquids, one normally averages over all particles, obtaining a descriptor of the probability to find a second particle a distance $r$ from a given particle, relative to that of the ideal gas.
 
 For $N$ particles of the same type at density $\rho$ it is
 
 $$g(r)=\frac{1}{N\rho}\left\langle\sum_i^{N}\sum_{i\neq j}\delta(r-|\mathbf{r}_i-\mathbf{r}_j|)\right\rangle$$.
 
-Notice that the average number of particles with a distance $R$, i.e. the average **coordination** $n(R)$, can be computed from the radial distribution function via integration in spherical coordinates (for 3D systems)
+Notice that the average number of particles with a distance $R$, i.e. the average **coordination number** $n(R)$, can be computed from the radial distribution function via integration in spherical coordinates (for 3D systems)
 
 $$n(R)=4\pi \rho\int_0^R g(r)r^2 dr$$
 
-In *postprocessing* the radial distribution function is a correlation object that acts on a trajectory. In order to compute it, we simply construct the object, specifying some parameters, and then run the calculation with the =do()= method
+In *postprocessing* the radial distribution function is a =Correlation= object that acts on a trajectory. In order to compute it, we simply construct the object, specifying some parameters, and then run the calculation with the =do()= method
 #+begin_src python
 gr = pp.RadialDistributionFunction(th, norigins=5, dr=0.04)
 gr.do()
@@ -117,9 +124,9 @@ gr.do()
 
 #+results:
 
-Once the calculation is performed, the radial distribution object gr contains (like all correlators in *postprocessing*) two arrays:
+Once the calculation is performed, the radial distribution object =gr= contains (like all correlators in *postprocessing*) two arrays:
 - the =grid= array contains the independent variable (or variables), binned according to our input parameters (in this case, the smallest space interval that we resolve, =dr=)
-- the =value= array contains the actual value of teh computation, in this case the values of the $g(r)$
+- the =value= array contains the actual value of the computation, in this case the values of $g(r)$
 
 We can directly plot the results with
 #+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="gr.png"
@@ -131,9 +138,9 @@ pl.ylabel("g(r)")
 #+results:
 [[file:gr.png]]
 
-As we can see, the function displays two narrow peaks around $r=1$ and a broader peak further away. The several peaks correspond to the fact that the trajectory actualy contains two types of particles, noted as "A" and "B". 
+As we can see, the function displays two narrow peaks around $r=1$ and a broader peak further away. The presence of several peaks is due to the fact that the system actually contains two types of particles, noted $A$ and $B$. 
 
-We can compute separate distribution functions for the $A$ and $B$ particles and also the cross distribution funtion for the probability to find a particle $B$ at distance $r$ from particle $A$ using the =Partial= class in *postprocessing*:
+We can compute separate distribution functions for the $A$ and $B$ particles and also the cross distribution funtion for the probability to find a particle $B$ at distance $r$ from particle $A$ using the =Partial= class:
 #+begin_src python
 gr = pp.Partial(pp.RadialDistributionFunction, species=['A', 'B'], trajectory=th, norigins=100)
 gr.do() 
@@ -153,7 +160,7 @@ pprint(gr.partial)
 :  ('B', 'A'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f7cbcea08b0>,
 :  ('B', 'B'): <atooms.postprocessing.gr.RadialDistributionFunctionFast object at 0x7f7cbcea0460>}
 
-We can treat the result as any norrmal dictionary: 
+We can treat the result as any normal dictionary: 
 #+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="gr_ab.png"
 for key,g in gr.partial.items(): 
     pl.plot(g.grid, g.value, label=str("".join(key)))
@@ -189,9 +196,9 @@ The most elementary of such quantities is the mean squared displacement (MSD). T
 
 $$ \delta r^2(t)= \langle |\mathbf{r}(t-t_0) - \mathbf{r}(t_0)|^2\rangle$$
 
-The average is normally perfomed over all the paricles $N$ and over multiple values for the *origin* of time $t_0$.
+The average is normally perfomed over all the $N$ particles and over multiple values for the *origin* of time $t_0$.
 
-The analysis process is now familiar. First we cosntruct the msd object and then perform the calculation with =do()=.
+The analysis process is now familiar. First we construct the msd object and then perform the calculation with =do()=.
 #+begin_src python
 msd = pp.MeanSquareDisplacement(th)
 msd.do()
@@ -227,7 +234,9 @@ We compute the self part of the intermediate scattering function (ISF) at specif
 #+begin_src python
 from math import pi
 import numpy
-isf = pp.Partial(pp.SelfIntermediateScattering, species=["A"], trajectory= th, kgrid=[2*pi, 2.5*pi], nk=1, tgrid=[0] + list(numpy.logspace(0, 3, base=10)))
+tgrid = [0] + list(numpy.logspace(0, 3, base=10))  # we must include t=0
+isf = pp.Partial(pp.SelfIntermediateScattering, species=["A"], trajectory=th,
+                 kgrid=[2*pi, 2.5*pi], nk=1, tgrid=tgrid)
 isf.do()
 #+end_src
 
@@ -238,10 +247,46 @@ To get some info on the parameters passed to compute the ISF, have a look at the
 The ISF decays to zero at long times, as it should in an ergodic liquid.
 #+begin_src python :prologue "pl.clf()" :epilogue "pl.savefig(image, bbox_inches='tight'); print(image); del image" :results file :var image="isf.png"
 pl.semilogx(isf.partial['A'].grid[1], isf.partial['A'].value[0], '-o') 
+pl.xlabel('t')
+pl.ylabel('ISF')
 #+end_src
 
 #+results:
 [[file:isf.png]]
+
+** More correlation functions
+Here is the full list of correlation functions currently available in *postprocessing*, along with the corresponding classes:
+#+begin_src python
+import inspect
+import atooms.postprocessing as pp
+for cls in inspect.getmembers(pp, inspect.isclass):    
+    if issubclass(cls[1], pp.Correlation) \
+       and cls[1] is not pp.Correlation \
+       and not 'Fast' in cls[0] \
+       and not 'Legacy' in cls[0] \
+       and not 'Optimized' in cls[0] \
+       and not 'Susceptibility' == cls[0]:
+        print('- `{}`: {}'.format(cls[0], cls[1].long_name))
+#+end_src
+
+#+results:
+#+begin_example
+- `BondAngleDistribution`: bond angle distribution
+- `Chi4SelfOverlap`: dynamic susceptibility of self overlap
+- `CollectiveOverlap`: collective overlap
+- `IntermediateScattering`: intermediate scattering function
+- `MeanSquareDisplacement`: mean square displacement
+- `NonGaussianParameter`: non-Gaussian parameter
+- `RadialDistributionFunction`: radial distribution function
+- `S4ktOverlap`: 4-point dynamic structure factor from self overlap
+- `SelfIntermediateScattering`: self intermediate scattering function
+- `SelfOverlap`: self overlap
+- `SpectralDensity`: spectral density
+- `StructureFactor`: structure factor
+- `VelocityAutocorrelation`: velocity autocorrelation
+#+end_example
+
+Some of them have multiple implementations (ex. =Fast= and =Legacy=), which are picked at runtime depending on your platform. The fastest implementation will be automatically picked up, if possible.
 
 * Writing your own correlation function
 We can extend the correlation class to compute additional correlation functions. The particle coordinates are loaded into the =_pos= instance variable as a list of numpy arrays. Each numpy array is a =(ndim, npart)= representation of the full particles' coordinates in a given frame of the trajectory. This is a gist of a new correlation class.
