Update docs using sphinx

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -2,24 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91e9788f",
+   "id": "aa3e9cd0",
    "metadata": {},
    "source": [
+    "Atooms: postprocessing\n",
+    "======================\n",
+    "\n",
+    ":hidden: index\n",
+    "\n",
+    "In this tutorial, we are going to show how to perform standard analysis\n",
+    "of molecular dynamics trajectories using the `atooms` package and its\n",
+    "`postprocessing` component. You can install `postprocessing` from pypi:\n",
+    "`pip install atooms-pp`.\n",
+    "\n",
     "Setup\n",
-    "=====\n",
+    "-----\n",
     "\n",
-    "In this notebook, we are going to show how to perform standard analysis\n",
-    "of molecular dynamics trajectories using the ****atooms**** package and\n",
-    "its ****postprocessing**** library. You can install both of them from\n",
-    "pypi.\n",
-    "\n",
-    "We start by loading common libraries for plotting and path handling.\n"
+    "We start by loading common libraries for plotting and path handling\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3bb83da",
+   "id": "08342144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +34,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e57180",
+   "id": "20241292",
    "metadata": {},
    "source": [
-    "We then import the ****postprocessing**** library and the trajectory\n",
-    "class from ****atooms****. In this particular case, we will read an XYZ\n",
-    "file, so we load the ****TrajectoryXYZ**** class\n"
+    "We then import the `postprocessing` package and the trajectory class\n",
+    "from `atooms`. In this particular case, we will read a trajectory file\n",
+    "in XYZ format, so we load the `TrajectoryXYZ` class\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2fbca07",
+   "id": "a517a3f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +55,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9973d7df",
+   "id": "3f18bfe1",
    "metadata": {},
    "source": [
-    "We consider an example trajectory, located in the postprocessing\n",
-    "package. We can grab from the git repository. Let\\'s store the path to\n",
-    "this file in a variable for later convenience\n"
+    "We consider a sample trajectory, which can be download from the\n",
+    "repository of the postprocessing package itself. Let\\'s store the path\n",
+    "to this file in a variable for later convenience\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67dfb48f",
+   "id": "6cbc27bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,11 +77,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6791ee0a",
+   "id": "e007d614",
    "metadata": {},
    "source": [
-    "Handling a trajectory\n",
-    "=====================\n",
+    "### Handling a trajectory\n",
     "\n",
     "A trajectory is an object with many properties. To load a trajectory, we\n",
     "create an instance of the class as follows\n"
@@ -85,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6729812",
+   "id": "431faf26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a14cab7",
+   "id": "459ad550",
    "metadata": {},
    "source": [
     "The trajectory is a list-like object, in the sense that it can be\n",
@@ -107,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "062fd609",
+   "id": "81c4ddf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc4c507",
+   "id": "0fb5beed",
    "metadata": {},
    "source": [
     "To know how many frames we have\n"
@@ -125,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1812d00",
+   "id": "07a469ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d3a6f6",
+   "id": "2970114f",
    "metadata": {},
    "source": [
     "To clarify: a slice is a list of frames, not a trajectory\n"
@@ -143,19 +147,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c88643",
+   "id": "ee0e170d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "th[10: 15]"
+    "th[10: 12]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "85d341d9",
+   "id": "340f3f23",
    "metadata": {},
    "source": [
-    "Note: it is actually possible to define a slice of a trajectory **as a\n",
+    "It is actually possible to define a slice of a trajectory **as a\n",
     "trajectory** by using the `Sliced` class decorator, see below.\n",
     "\n",
     "If the trajectory contains metadata, these can be retrieved directly:\n"
@@ -164,22 +168,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c31d563a",
+   "id": "363cf7b8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pprint import pprint\n",
     "print(\"Timestep during the trajectory:\", th.timestep)\n",
     "print(\"Steps corresponding to the 3rd frame:\", th.steps[2])\n",
-    "print(\"Trajectory metadata\", th.metadata)"
+    "print(\"Additional metadata:\")\n",
+    "pprint(th.metadata)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24b05cf0",
+   "id": "62665666",
    "metadata": {},
    "source": [
     "Analysis of the trajectory\n",
-    "==========================\n",
+    "--------------------------\n",
     "\n",
     "Now that we have constructed a trajectory object, we can proceed to the\n",
     "analysis. We are going to consider two main aspects of the analysis:\n",
@@ -187,38 +193,38 @@
     "-   structural correlations\n",
     "-   dynamical correlations\n",
     "\n",
-    "Structural correlations\n",
-    "-----------------------\n",
+    "### Structural correlations\n",
     "\n",
-    "### Radial distribution function\n",
+    "1.  Radial distribution function\n",
     "\n",
-    "The radial distribution function $g(r)$ describes how density varies as\n",
-    "a function of the radial distance from a reference particle. In liquids,\n",
-    "one normally averages over all particles, obtaining a descriptor of the\n",
-    "probability to find a second particle a distance $r$ from a given\n",
-    "particle, relative to that of the ideal gas.\n",
+    "    The radial distribution function $g(r)$ describes how the local\n",
+    "    density varies as a function of the distance from a reference\n",
+    "    particle. In liquids, one normally averages over all particles,\n",
+    "    obtaining a descriptor of the probability to find a second particle\n",
+    "    a distance $r$ from a given particle, relative to that of the ideal\n",
+    "    gas.\n",
     "\n",
-    "For $N$ particles of the same type at density $\\rho$ it is\n",
+    "    For $N$ particles of the same type at density $\\rho$ it is\n",
     "\n",
-    "$$g(r)=\\frac{1}{N\\rho}\\left\\langle\\sum_i^{N}\\sum_{i\\neq j}\\delta(r-|\\mathbf{r}_i-\\mathbf{r}_j|)\\right\\rangle$$.\n",
+    "    $$g(r)=\\frac{1}{N\\rho}\\left\\langle\\sum_i^{N}\\sum_{i\\neq j}\\delta(r-|\\mathbf{r}_i-\\mathbf{r}_j|)\\right\\rangle$$.\n",
     "\n",
-    "Notice that the average number of particles with a distance $R$, i.e.\n",
-    "the average ****coordination**** $n(R)$, can be computed from the radial\n",
-    "distribution function via integration in spherical coordinates (for 3D\n",
-    "systems)\n",
+    "    Notice that the average number of particles with a distance $R$,\n",
+    "    i.e. the average ****coordination number**** $n(R)$, can be computed\n",
+    "    from the radial distribution function via integration in spherical\n",
+    "    coordinates (for 3D systems)\n",
     "\n",
-    "$$n(R)=4\\pi \\rho\\int_0^R g(r)r^2 dr$$\n",
+    "    $$n(R)=4\\pi \\rho\\int_0^R g(r)r^2 dr$$\n",
     "\n",
-    "In **postprocessing** the radial distribution function is a correlation\n",
-    "object that acts on a trajectory. In order to compute it, we simply\n",
-    "construct the object, specifying some parameters, and then run the\n",
-    "calculation with the `do()` method\n"
+    "    In `postprocessing` the radial distribution function is a\n",
+    "    `Correlation` object that acts on a trajectory. In order to compute\n",
+    "    it, we simply construct the object, specifying some parameters, and\n",
+    "    then run the calculation with the `do()` method\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0930363",
+   "id": "fbb66629",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,17 +234,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccfb077f",
+   "id": "c591d2fc",
    "metadata": {},
    "source": [
-    "Once the calculation is performed, the radial distribution object gr\n",
-    "contains (like all correlators in **postprocessing**) two arrays:\n",
+    "Once the calculation is performed, the radial distribution object `gr`\n",
+    "contains (like all correlators in `postprocessing`) two arrays:\n",
     "\n",
     "-   the `grid` array contains the independent variable (or variables),\n",
     "    binned according to our input parameters (in this case, the smallest\n",
     "    space interval that we resolve, `dr`)\n",
-    "-   the `value` array contains the actual value of teh computation, in\n",
-    "    this case the values of the $g(r)$\n",
+    "-   the `value` array contains the actual value of the computation, in\n",
+    "    this case the values of $g(r)$\n",
     "\n",
     "We can directly plot the results with\n"
    ]
@@ -246,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110fab32",
+   "id": "67c71d93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,26 +263,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61704449",
+   "id": "f343e654",
    "metadata": {},
    "source": [
     "![](gr.png)\n",
     "\n",
     "As we can see, the function displays two narrow peaks around $r=1$ and a\n",
-    "broader peak further away. The several peaks correspond to the fact that\n",
-    "the trajectory actualy contains two types of particles, noted as \\\"A\\\"\n",
-    "and \\\"B\\\".\n",
+    "broader peak further away. The presence of several peaks is due to the\n",
+    "fact that the system actually contains two types of particles, noted $A$\n",
+    "and $B$.\n",
     "\n",
     "We can compute separate distribution functions for the $A$ and $B$\n",
     "particles and also the cross distribution funtion for the probability to\n",
     "find a particle $B$ at distance $r$ from particle $A$ using the\n",
-    "`Partial` class in **postprocessing**:\n"
+    "`Partial` class:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4559d27",
+   "id": "bb606089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2ee406",
+   "id": "5609897d",
    "metadata": {},
    "source": [
     "In this case, the result contains a dictionary `gr.partial`:\n"
@@ -295,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad90a73a",
+   "id": "85d7b4c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,16 +311,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a8b828d",
+   "id": "c14bcf60",
    "metadata": {},
    "source": [
-    "We can treat the result as any norrmal dictionary:\n"
+    "We can treat the result as any normal dictionary:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a8a89d6",
+   "id": "6ddca676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,18 +333,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebcd56b1",
+   "id": "190bc830",
    "metadata": {},
    "source": [
+    "![](gr_ab.png)\n",
+    "\n",
     "Sometimes, it is useful to analyse only sections of a trajectory. To\n",
-    "this purpose, one can slice the trajectory using **atooms** and analyse\n",
+    "this purpose, one can slice the trajectory using `atooms` and analyse\n",
     "individual frames or subsets of frames.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5e19391",
+   "id": "7b1f7ac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,33 +361,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7399d443",
+   "id": "8742532c",
    "metadata": {},
    "source": [
-    "Dynamical correlations\n",
-    "----------------------\n",
+    "![](gr_slice.png)\n",
     "\n",
-    "### Mean square displacement\n",
+    "### Dynamical correlations\n",
     "\n",
-    "A very similar kind of anaysis can be performed on dynamical quantities,\n",
-    "which quantify correlations in time.\n",
+    "1.  Mean square displacement\n",
     "\n",
-    "The most elementary of such quantities is the mean squared displacement\n",
-    "(MSD). This is defined as\n",
+    "    A very similar kind of anaysis can be performed on dynamical\n",
+    "    quantities, which quantify correlations in time.\n",
     "\n",
-    "$$ \\delta r^2(t)= \\langle |\\mathbf{r}(t-t_0) - \\mathbf{r}(t_0)|^2\\rangle$$\n",
+    "    The most elementary of such quantities is the mean squared\n",
+    "    displacement (MSD). This is defined as\n",
     "\n",
-    "The average is normally perfomed over all the paricles $N$ and over\n",
-    "multiple values for the **origin** of time $t_0$.\n",
+    "    $$ \\delta r^2(t)= \\langle |\\mathbf{r}(t-t_0) - \\mathbf{r}(t_0)|^2\\rangle$$\n",
     "\n",
-    "The analysis process is now familiar. First we cosntruct the msd object\n",
-    "and then perform the calculation with `do()`.\n"
+    "    The average is normally perfomed over all the $N$ particles and over\n",
+    "    multiple values for the **origin** of time $t_0$.\n",
+    "\n",
+    "    The analysis process is now familiar. First we construct the msd\n",
+    "    object and then perform the calculation with `do()`.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b5b726b",
+   "id": "69856362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "505631aa",
+   "id": "1d26ca52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,9 +410,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c7c7d95",
+   "id": "39fa45eb",
    "metadata": {},
    "source": [
+    "![](msd.png)\n",
+    "\n",
     "Again, we can compute partial mean square displacements using the\n",
     "`Partial` class\n"
    ]
@@ -411,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bbab434",
+   "id": "b43b6308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,10 +436,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7959fec3",
+   "id": "5fa50f6c",
    "metadata": {},
    "source": [
-    "### Self intermediate scattering function\n",
+    "![](msd_ab.png)\n",
+    "\n",
+    "Self intermediate scattering function\n",
     "\n",
     "We compute the self part of the intermediate scattering function (ISF)\n",
     "at specific wave-vectors using a logarithmic time grid.\n"
@@ -437,19 +450,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5304eca4",
+   "id": "37abe17f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import pi\n",
     "import numpy\n",
-    "isf = pp.Partial(pp.SelfIntermediateScattering, species=[\"A\"], trajectory= th, kgrid=[2*pi, 2.5*pi], nk=1, tgrid=[0] + list(numpy.logspace(0, 3, base=10)))\n",
+    "tgrid = numpy.logspace(0, 3, base=10)  # we must include t=0\n",
+    "isf = pp.Partial(pp.SelfIntermediateScattering, species=[\"A\"], trajectory=th,\n",
+    "                 kgrid=[2*pi, 2.5*pi], nk=1, tgrid=tgrid)\n",
     "isf.do()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "83f3732f",
+   "id": "1db7170e",
    "metadata": {},
    "source": [
     "To get some info on the parameters passed to compute the ISF, have a\n",
@@ -462,20 +477,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ffb163",
+   "id": "5b5223f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl.semilogx(isf.partial['A'].grid[1], isf.partial['A'].value[0], '-o') "
+    "pl.semilogx(isf.partial['A'].grid[1], isf.partial['A'].value[0], '-o') \n",
+    "pl.xlabel('t')\n",
+    "pl.ylabel('ISF')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ee2fa2ed",
+   "id": "04f8a26b",
    "metadata": {},
    "source": [
+    "![](isf.png)\n",
+    "\n",
+    "### More correlation functions\n",
+    "\n",
+    "Here is the full list of correlation functions currently available in\n",
+    "`postprocessing`, along with the corresponding classes:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae3efdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "import atooms.postprocessing as pp\n",
+    "for cls in inspect.getmembers(pp, inspect.isclass):    \n",
+    "    if issubclass(cls[1], pp.Correlation) \\\n",
+    "       and cls[1] is not pp.Correlation \\\n",
+    "       and not 'Fast' in cls[0] \\\n",
+    "       and not 'Legacy' in cls[0] \\\n",
+    "       and not 'Optimized' in cls[0] \\\n",
+    "       and not 'Susceptibility' == cls[0]:\n",
+    "        print('- `{}`: {}'.format(cls[0], cls[1].long_name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dddb333d",
+   "metadata": {},
+   "source": [
+    "-   \\`BondAngleDistribution\\`: bond angle distribution\n",
+    "-   \\`Chi4SelfOverlap\\`: dynamic susceptibility of self overlap\n",
+    "-   \\`CollectiveOverlap\\`: collective overlap\n",
+    "-   \\`IntermediateScattering\\`: intermediate scattering function\n",
+    "-   \\`MeanSquareDisplacement\\`: mean square displacement\n",
+    "-   \\`NonGaussianParameter\\`: non-Gaussian parameter\n",
+    "-   \\`RadialDistributionFunction\\`: radial distribution function\n",
+    "-   \\`S4ktOverlap\\`: 4-point dynamic structure factor from self overlap\n",
+    "-   \\`SelfIntermediateScattering\\`: self intermediate scattering\n",
+    "    function\n",
+    "-   \\`SelfOverlap\\`: self overlap\n",
+    "-   \\`SpectralDensity\\`: spectral density\n",
+    "-   \\`StructureFactor\\`: structure factor\n",
+    "-   \\`VelocityAutocorrelation\\`: velocity autocorrelation\n",
+    "\n",
+    "Some of them have multiple implementations (ex. `Fast` and `Legacy`),\n",
+    "which are picked at runtime depending on your platform. The fastest\n",
+    "implementation will be automatically picked up, if possible.\n",
+    "\n",
     "Writing your own correlation function\n",
-    "=====================================\n",
+    "-------------------------------------\n",
     "\n",
     "We can extend the correlation class to compute additional correlation\n",
     "functions. The particle coordinates are loaded into the `_pos` instance\n",
@@ -488,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46527d83",
+   "id": "bab8fdf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cee23c72",
+   "id": "0ff0b4e6",
    "metadata": {},
    "outputs": [],
    "source": [
